<resources>
    <string name="app_name">Pashion_Today</string>
    <string name="title_activity_pashion">PashionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_closet">Closet</string>
    <string name="menu_daily_look">Daily Look</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_recommned">Recommend</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="main_str1">당신의 옷장 속 잠자고 있는 옷들로 특별한 룩을 스타일링 합니다</string>
    <string name="main_str2">옷을 사도 사도 입을 옷이 없는 고민은 이제 그만!</string>
    <string name="main_str3">매일 특별한 하루를 맞이해보세요.</string>
    <string name="kakao_app_key">3560a660992edfb143e8d0c0026a2cfd</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
